fix flicker on viz time change

--- a/common/src/main/webapp/sass/explore.scss
+++ b/common/src/main/webapp/sass/explore.scss
@@ -803,6 +803,7 @@ thead tr th.sticky-header {
   /* stylelint-disable-next-line selector-class-pattern */
   .react-datepicker__input-time-container {
     text-align: center;
+    margin: 5px 0 0 0;
   }
 
   /* stylelint-disable-next-line selector-class-pattern */
